# snapflow

./: .gitignore  MOR_turbi_v8_POD-DL_only_GH.ipynb  MOR_turbi_v9_svd_only_GH.ipynb  Makefile  README.md  actual_requirements.txt  mor_fcts.py  notebook_test.ipynb  notebook_test.py  parameters.yaml  pyproject.toml  requirements.txt  surrogate_test.py
pipelines/00_template_pipeline/: 00_template_pipeline.ipynb  00_template_pipeline.py  parameters.yaml
pipelines/custom_pipelines/00_report_pipeline/: parameters.yaml  surrogate_test.ipynb  surrogate_test.py
pipelines/modes_experiment/: modes_experiment.ipynb
pipelines/one_parameter_experiment/: surrogate_test.py
pipelines/tutorials_and_template/00_template_pipeline/: 00_template_pipeline.ipynb  00_template_pipeline.py  parameters.yaml
pipelines/tutorials_and_template/01_autoencoder_validation/: autoencoder_validation.ipynb  autoencoder_validation.py  parameters.yaml
pipelines/tutorials_and_template/01_modes_experiment/: modes_experiment.ipynb  modes_experiment.py  parameters.yaml
pipelines/tutorials_and_template/02_one_parameter_experiment/: parameters.yaml  surrogate_test.py
pipelines/tutorials_and_template/03_dmd/: dmd_test.py  parameters.yaml
snapflow/: __init__.py  data_split.py  linear_reduction.py  nonlinear_reduction.py  normalization.py  postprocessing.py  snapshots.py  surrogate.py  utils.py
src/: __init__.py  data_split.py  dim_reduction.py  linear_reduction.py  nonlinear_reduction.py  postprocessing.py  snapshots.py  surrogate.py  utils.py
(+6 files in other folders)
